<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>


    </data>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_background_white"
        android:elevation="90dp"
        android:orientation="vertical"
        android:padding="20dp"
        tools:targetApi="lollipop">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/do_you_want_to_delete"
            android:textColor="@color/colorPrimaryText"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtRoomName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/room_name"
            android:textColor="@color/colorPrimaryText"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnYes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_background_yellow"
            android:text="@string/yes"
            android:textColor="@color/QRCodeWhiteColor" />

        <Button
            android:id="@+id/btnNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/button_background_yellow"
            android:text="@string/no"
            android:textColor="@color/QRCodeWhiteColor" />

    </LinearLayout>
</layout>