<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="dialog"
            type="com.div.home.ui.dialog.SharedFromAlertDialog" />
    </data>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="90dp"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/QRCodeWhiteColor"
        app:cardCornerRadius="12dp"
        tools:targetApi="lollipop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/alexa_pop" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/leave_old_shared_rooms"
                android:textColor="@color/colorPrimaryText"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/you_can_only_be_member_of_single_user_s_rooms_so_click_ok_to_continue_and_remove_previous_shared_rooms_and_become_member_of_new_user_s_rooms_or_to_cancel_click_on_cancel"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/btnOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:text="@string/ok" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>
