<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/QRCodeWhiteColor"
        app:cardCornerRadius="12dp"
        android:elevation="90dp"
        tools:targetApi="lollipop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/alexa_pop"
                android:scaleType="centerCrop"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amazon_alexa"
                android:textSize="24sp"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryText"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amazon_alexa_text_vie_w_where_there_is_explaintaiton"
                android:textSize="20sp"
                android:padding="12dp"
                android:layout_marginBottom="18dp"
                android:textColor="@color/colorPrimaryText"
                android:gravity="center"/>

            <Button
                android:id="@+id/btnBackAlexa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/back"
                android:textColor="@color/QRCodeWhiteColor"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>
